Restore fake anchor to avoid header sticky overlap

--- a/repondeur/zam_repondeur/static/css/visionneuse.css
+++ b/repondeur/zam_repondeur/static/css/visionneuse.css
@@ -127,6 +127,13 @@ nav.secondary {
   article.sous-amendement {
     margin: -1.4rem 1rem 1rem 2.5rem;
   }
+  /* Useful to stay below the sticky Article's header. */
+  article .fake-anchor {
+    display: block;
+    position: relative;
+    top: -6rem;
+    visibility: hidden;
+  }
   h2 {
     margin: .6rem 12rem .2rem 0;
     line-height: 1.2;
